# cargo-script

./: .gitignore  Cargo.toml  LICENSE  README.md  Scripts.toml
.scripts/: deploy.sh  script1.sh  test_script.sh
docs/: ROADMAP.md  cli_standards_analysis.md  implementation_plan.md  major_update.md  project_overview.md
src/: cgs.rs  commands.rs  error.rs  lib.rs  main.rs  start.rs
src/commands/: completions.rs  init.rs  mod.rs  script.rs  show.rs  validate.rs
tests/: Scripts_test.toml  constants.rs  test_cargo_subcommand.rs  test_completions.rs  test_dry_run.rs  test_env_vars.rs  test_error_messages.rs  test_script_commands.rs  test_toolchain_requires.rs  test_validate.rs  tests.rs
