[package]
name = "cargo-run"
description = "A powerful, fast, and developer-friendly CLI tool for managing project scripts in Rust. Think npm scripts, make, or just — but built specifically for the Rust ecosystem."
version = "0.4.0"
edition = "2021"
authors = ["Richard Zampieri<br.developer@gmail.com>"]
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "task", "runner", "development", "utility", "scripts", "automation", "ci", "cd"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rsaz/cargo-script"
homepage = "https://github.com/rsaz/cargo-script"
documentation = "https://docs.rs/cargo-run"
rust-version = "1.79"

include = [
    "Cargo.toml",
    "README.md",
    "src/**",
]

[dependencies]
clap = { version = "4.5.7", features = ["derive"]}
clap_complete = "4.5.2"
serde = { version = "1.0.203", features = ["derive"]}
toml = "0.8.14"
colored = "2.1.0"
emoji = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[[bin]]
name = "cargo-script"
path = "src/main.rs"

[[bin]]
name = "cgs"
path = "src/cgs.rs"






